--- a/OzgurIndıv/.settings/org.eclipse.wst.common.component
+++ b/OzgurIndıv/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="OzgurIndiv">
+    <wb-module deploy-name="Ozgur_Individual">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/OzgurIndiv/build/classes"/>
-        <property name="context-root" value="OzgurIndiv"/>
+        <property name="java-output-path" value="/Ozgur_Individual/build/classes"/>
+        <property name="context-root" value="Ozgur_Individual"/>
     </wb-module>
 </project-modules>
