--- a/group11/src/servlet/Ozgur_Individual/.settings/org.eclipse.wst.common.component
+++ b/group11/src/servlet/Ozgur_Individual/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Ozgur_Indiv">
+    <wb-module deploy-name="Ozgur_Indivi">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Ozgur_Indiv"/>
-        <property name="java-output-path" value="/Ozgur_Indiv/build/classes"/>
+        <property name="context-root" value="Ozgur_Indivi"/>
+        <property name="java-output-path" value="/Ozgur_Indivi/build/classes"/>
     </wb-module>
 </project-modules>
