--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -1,6 +1,12 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
+
 <!DOCTYPE html>
 <html>
 <head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -33,7 +39,7 @@
 	        <li class="active"><a href="#">Home Page <span class="sr-only"></span></a></li>
 	        <li><a href="#">Profile</a></li>
 	        <li><a href="#">Log Out</a></li>
-	        <li><a href="#">Create Topic</a></li>
+	        <li><a href="topic/add">Create Topic</a></li>
 	        <li><a href="#">Add Relationship</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
@@ -93,20 +99,22 @@
     </br>
     <div class="text-center">POPULAR TOPICS</div>
 		</br>
-    <ul class="nav nav-sidebar">
-      <li class="">
-      	<a href="#">First Flight in Turkey <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="">
-      	<a href="#">Sivil War in Mozambique</a>
-      </li>
-      <li class="">
-      	<a href="#">Inferno</a>
-      </li>
-      <li class="">
-      	<a href="#">Debate2016</a>
-      </li>
-    </ul>
+		<div class="panel panel-default">
+	    <ul class="nav nav-sidebar">
+	      <li class="">
+	      	<a href="#">First Flight in Turkey <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="">
+	      	<a href="#">Sivil War in Mozambique</a>
+	      </li>
+	      <li class="">
+	      	<a href="#">Inferno</a>
+	      </li>
+	      <li class="">
+	      	<a href="#">Debate2016</a>
+	      </li>
+	    </ul>
+		</div>
   </div>
 	<script type="text/javascript">
 		var can = document.getElementById('circleCanvas');
@@ -166,7 +174,7 @@
 		}
 
 		function redirectToTopic() {
-			window.location.href = "topic"
+			window.location.href = "topic/show"
 		}
 
 	</script>
