--- a/cocomapapp/templates/topicMath.html
+++ b/cocomapapp/templates/topicMath.html
@@ -34,7 +34,7 @@
           <li><a href="/cocomapapp">Home Page <span class="sr-only"></span></a></li>
           <li><a href="#">Profile</a></li>
           <li><a href="#">Log Out</a></li>
-          <li class="active"><a href="topic/add">Create Topic</a></li>
+          <li><a href="add">Create Topic</a></li>
           <li><a href="#">Add Relationship</a></li>
         </ul>
 				<div class="pull-right">
@@ -48,36 +48,99 @@
   <div class="col-sm-9 col-md-9 main">
 		<!-- title -->
 		<div class="mb-for-footer">
-			<div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <div class="img-circle">
-                <div class="img-circle-content">
-                    <h1>Topic Name</h1>
-                    <input type="text" id="topicName">
-                    <h1>Tags</h1>
-                    <input type="text" id="tags">
-                    <h1>Relationships</h1>
-                    <input type="text" id="relationships">
-                </div>
-            </div>
-            <label class="checkbox-inline">
-                <input type="checkbox" value="">Check this if you want to add a post(you can add the post later)</label>
-        </div>
-        <div class="col-md-3"></div>
-      </div>
-      <div class="row">
-          <div class="col-md-4"></div>
-          <div class="col-md-4">
-              <a href="/cocomapapp/topic/second" style="width:100%" type="button" class="btn btn-primary">Publish</a>
-          </div>
-          <div class="col-md-4"></div>
-          <div class="col-md-5"></div>
-          <div class="col-md-2">
-              <button style="width:100%" type="button" class="btn btn-default">Cancel</button>
-          </div>
-          <div class="col-md-5"></div>
-      </div>
+			<div class="panel panel-default panelmb0" style="background-color:#B7C0D7;">
+		  	<div class="panel-body panelmb0" style="padding: 0;">
+		    	<div class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
+		      	<a href="/cocomapapp"><b>Zoom Out</b></a>
+		    	</div>
+		    	<h1 style= "text-align:center;">Matematiksel Notasyonlarla Yazilabilen Atasozleri</h1>
+		    	<div class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
+		      	<a><b>#</b>matematik</a> <a><b>#</b>atasozleri</a>
+		    	</div>
+		  	</div>
+		  	<hr style="margin-top: 0; margin-bottom: 0;">
+				<div class="panel panelmb0;" style="margin-bottom:0; background-color:#dfe3ee;">
+		    	<!-- 1st entry -->
+		      <div class="panel panel-default panel-margined">
+		        <div class="panel-body">
+		          <p><a href="#">Didem Surus: </a> <br>ya oldugun gibi gorun ya da gorundugun gibi ol.<br>f(x)=y v f(y)=x</p>
+		        </div>
+		        <div class="panel-footer">
+		        	<!-- Tags -->
+		          <a><b>#</b>matematik</a> <a><b>#</b>atasozleri</a>
+		          <!-- Thumbs up, down -->
+		          <div class="pull-right">
+		            Accuracy:
+		            <span class="glyphicon glyphicon-thumbs-up" style="color: blue;"><span style="color:green;">%82</span></span>
+		            <span class="glyphicon glyphicon-thumbs-down"><span style="color:red;">%18</span> </span>
+		          </div>
+		        </div>
+		      </div>
+		  		<!-- 2nd entry -->
+		      <div class="panel panel-default panel-margined">
+		        <div class="panel-body">
+		          <p><a href="#">Emrah Kucuk: </a> <br>
+		          								1^0 = 1<br>
+												1^1 = 1<br>
+												1^10 = 1<br>
+												1^100 = 1<br>
+
+												esege altin semer de vursan esek yine esektir</p>
+		        </div>
+		        <div class="panel-footer">
+		          <!-- Tags -->
+		          <a><b>#</b>matematik</a> <a><b>#</b>atasozleri</a>
+		          <!-- Thumbs up, down -->
+		          <div class="pull-right">
+		            Accuracy:
+		            <span class="glyphicon glyphicon-thumbs-up" style="color: blue;"><span style="color:green;">%36</span></span>
+		            <span class="glyphicon glyphicon-thumbs-down"><span style="color:red;">%64</span> </span>
+		          </div>
+		        </div>
+		      </div>
+		    	<!-- 3rd entry -->
+		      <div class="panel panel-default panel-margined">
+		        <div class="panel-body">
+		          <p><a href="#">Dogukan Ocak: </a> <br>(-6) = -6
+													<br>[-6] = -6
+													<br>{-6} = -6
+													<br>l-6l = 6
+													<br>
+													pantalonu gösteren ütüdür
+</p>
+		        </div>
+		        <div class="panel-footer">
+		          <!-- Tags -->
+		          <a><b>#</b>matematik</a> <a><b>#</b>atasozleri</a>
+		          <!-- Thumbs up, down -->
+		          <div class="pull-right">
+		            Accuracy:
+		            <span class="glyphicon glyphicon-thumbs-up"><span style="color:green;">%54</span></span>
+		            <span class="glyphicon glyphicon-thumbs-down" style="color: blue;"><span style="color:red;">%46</span> </span>
+		          </div>
+		        </div>
+		      </div>
+		    	<!-- 4th entry -->
+		      <div class="panel panel-default panel-margined">
+		        <div class="panel-body">
+		          <p><a href="#">Busra Ozis: </a> <br>1 + 1 + 1 + 1 + 1 + 1 + 1 + 1 = 8<br>
+
+												damlaya damlaya gol olur
+							</p>
+		        </div>
+		        <div class="panel-footer">
+		          <!-- Tags -->
+		          <a><b>#</b>matematik</a> <a><b>#</b>atasozleri</a>
+		          <!-- Thumbs up, down -->
+		          <div class="pull-right">
+		            Accuracy:
+		            <span class="glyphicon glyphicon-thumbs-up" style="color: blue;"><span style="color:green;">%99</span></span>
+		            <span class="glyphicon glyphicon-thumbs-down"><span style="color:red;">%1</span> </span>
+		          </div>
+		        </div>
+		      </div>
+		    </div>
+		  </div>
 		</div>
     <div class="row col-sm-9 sticky-footer" style="bottom:0; position:fixed;">
   	  <div class="input-group">
