--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -66,9 +66,9 @@
                     <h1>Topic Name</h1>
                     <input type="text" id="topicName" class="form-control" placeholder="Topic Name">
                     <h1>Relationships</h1>
-										<div class="form-group">
-											<input type="text" id="relationships-name" class="form-control" placeholder="Relationship Name">
-	                    <input id="relationships-topic" placeholder="Name of a Topic">
+										<div class="form-group newRelation">
+											<input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name">
+	                    <input id="relationships-topic" class="makeinline" placeholder="Name of a Topic">
 										</div>
 										<h1>Tags</h1>
 										<input type="text" id="tags" data-role="tagsinput" placeholder="Tag">
