--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -7,12 +7,15 @@
 <head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../assets/main.css">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script src="/static/topic.js" type="text/javascript"></script>
     <title></title>
 </head>
 <body>
@@ -53,13 +56,13 @@
 		    	<div class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
 		      	<a href="/cocomapapp"><b>Zoom Out</b></a>
 		    	</div>
-		    	<h1 style= "text-align:center;">TRUMP</h1>
+		    	<h1 id="theTitle" style= "text-align:center;">TRUMP</h1>
 		    	<div class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
 		      	<a><b>#</b>president2016</a> <a><b>#</b>makeamericagreatagain</a> <a><b>#</b>thedonald</a>
 		    	</div>
 		  	</div>
 		  	<hr style="margin-top: 0; margin-bottom: 0;">
-				<div class="panel panelmb0;" style="margin-bottom:0; background-color:#dfe3ee;">
+				<div class="panel panelmb0; panelContainer" style="margin-bottom:0; background-color:#dfe3ee;">
 		    	<!-- 1st entry -->
 		      <div class="panel panel-default panel-margined">
 		        <div class="panel-body">
