title and tags in topic page is set from the json

--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -57,8 +57,8 @@
 		      	<a href="/cocomapapp"><b>Zoom Out</b></a>
 		    	</div>
 		    	<h1 id="theTitle" style= "text-align:center;">TRUMP</h1>
-		    	<div class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
-		      	<a><b>#</b>president2016</a> <a><b>#</b>makeamericagreatagain</a> <a><b>#</b>thedonald</a>
+		    	<div id="topicTags" class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
+		      	
 		    	</div>
 		  	</div>
 		  	<hr style="margin-top: 0; margin-bottom: 0;">
