textarea into the post page

--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -64,8 +64,10 @@
 		  	<hr style="margin-top: 0; margin-bottom: 0;">
 				<div class="panel panelmb0; panelContainer" style="margin-bottom:0; background-color:#dfe3ee;">
 		    	<!-- 1st entry -->
-		      
+
 		    </div>
+
+				<textarea class="form-control collapse" rows="3" id="post"></textarea> <br/>
 		  </div>
 		</div>
     <div class="row col-sm-9 sticky-footer" style="bottom:0; position:fixed;">
