contenteditabl property, made compatible with firefox browser

--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -57,7 +57,7 @@
 		    	<div class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
 		      	<a href="/cocomapapp"><b>Zoom Out</b></a>
 		    	</div>
-		    	<h1 id="theTitle" style= "text-align:center;">TRUMP</h1>
+		    	<h1 id="theTitle" style= "text-align:center;"></h1>
 		    	<div id="topicTags" class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
 
 		    	</div>
@@ -67,10 +67,7 @@
 		    	<!-- 1st entry -->
 
 		    </div>
-				<div id="content" contenteditable class="panel panel-default panel-margined" >
-
-
-
+				<div id="content" contenteditable="true" class="panel panel-default panel-margined" >
 				</div>
 				<button id="post_button" type="button" class="btn btn-primary btn-lg btn-block">Post</button>
 		  </div>
