post button added

--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -16,6 +16,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<script src="/static/topic.js" type="text/javascript"></script>
+		<link rel="stylesheet" type="text/css" href="/static/topic.css">
     <title></title>
 </head>
 <body>
@@ -58,7 +59,7 @@
 		    	</div>
 		    	<h1 id="theTitle" style= "text-align:center;">TRUMP</h1>
 		    	<div id="topicTags" class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
-		      	
+
 		    	</div>
 		  	</div>
 		  	<hr style="margin-top: 0; margin-bottom: 0;">
@@ -66,8 +67,12 @@
 		    	<!-- 1st entry -->
 
 		    </div>
+				<div id="content" contenteditable class="panel panel-default panel-margined" >
 
-				<textarea class="form-control collapse" rows="3" id="post"></textarea> <br/>
+
+
+				</div>
+				<button id="post_button" type="button" class="btn btn-primary btn-lg btn-block">Post</button>
 		  </div>
 		</div>
     <div class="row col-sm-9 sticky-footer" style="bottom:0; position:fixed;">
