Added add_post. Changed topicAdd to trigger POST request.

--- a/cocomapapp/templates/postAdd.html
+++ b/cocomapapp/templates/postAdd.html
@@ -34,7 +34,7 @@
           <li><a href="/cocomapapp">Home Page <span class="sr-only"></span></a></li>
           <li><a href="#">Profile</a></li>
           <li><a href="#">Log Out</a></li>
-          <li class="active"><a href="topic/add">Create Topic</a></li>
+          <li><a href="add">Create Topic</a></li>
           <li><a href="#">Add Relationship</a></li>
         </ul>
 				<div class="pull-right">
@@ -48,39 +48,41 @@
   <div class="col-sm-9 col-md-9 main">
 		<!-- title -->
 		<div class="mb-for-footer">
-			<form action="" method="post">{% csrf_token %}
-			<div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <div class="img-circle">
-                <div class="img-circle-content">
-                    <h1>Topic Name</h1>
-                    <input type="text" id="topicName">
-                    <h1>Tags</h1>
-                    <input type="text" id="tags">
-                    <h1>Relationships</h1>
-                    <input type="text" id="relationships">
-                </div>
-            </div>
-            <label class="checkbox-inline">
-                <input type="checkbox" value="">Check this if you want to add a post(you can add the post later)</label>
-        </div>
-        <div class="col-md-3"></div>
-      </div>
-      <div class="row">
-          <div class="col-md-4"></div>
-          <div class="col-md-4">
-			   <button name="foo" value="upvote">Publish</button>
-              <!--<a href="/cocomapapp/topic/second" style="width:100%" type="button" class="btn btn-primary">Publish</a> -->
-          </div>
-          <div class="col-md-4"></div>
-          <div class="col-md-5"></div>
-          <div class="col-md-2">
-              <button style="width:100%" type="button" class="btn btn-default">Cancel</button>
-          </div>
-          <div class="col-md-5"></div>
-      </div>
-  </form>
+			<div class="panel panel-default panelmb0" style="background-color:#B7C0D7;">
+		  	<div class="panel-body panelmb0" style="padding: 0;">
+		    	<div class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
+		      	<a href="/cocomapapp"><b>Zoom Out</b></a>
+		    	</div>
+		    	<h1 style= "text-align:center;">Matematiksel Notasyonlarla Yazilabilen Atasozleri</h1>
+		    	<div class="panel panel-default panel-modest panelmb0 pull-right" style="background-color:#F8F9FC;">
+		      	<a><b>#</b>matematik</a> <a><b>#</b>atasozleri</a>
+		    	</div>
+		  	</div>
+		  	<hr style="margin-top: 0; margin-bottom: 0;">
+				<div class="panel panelmb0;" style="margin-bottom:0; background-color:#dfe3ee;">
+
+		    	<!-- 4th entry -->
+		      <div class="panel panel-default panel-margined">
+				<form action="" method="post">{% csrf_token %}
+		        <div class="panel-body">
+		          <p><a href="#">Busra Ozis: </a>							</p>
+
+					  <textarea rows="4" cols="70" name="content">
+					  </textarea>
+		        </div>
+		        <div class="panel-footer">
+		          <!-- Tags -->
+				  Tags: <textarea rows="1" cols="30" name="tags">
+				  </textarea>
+		          <!-- Thumbs up, down -->
+		          <div class="pull-right">
+		            <button name="submit">Submit</button>
+		          </div>
+		        </div>
+				</form>
+		      </div>
+		    </div>
+		  </div>
 		</div>
     <div class="row col-sm-9 sticky-footer" style="bottom:0; position:fixed;">
   	  <div class="input-group">
