Topic add is done without relation

--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -10,11 +10,11 @@
               <div class="img-circle">
                   <div class="img-circle-content">
                       <h1>Topic Name</h1>
-                      <input type="text" id="topicName">
+                      <textarea rows="1" cols="30" name="topicName"></textarea>
                       <h1>Tags</h1>
-                      <input type="text" id="tags">
+                      <textarea rows="1" cols="30" name="tags"></textarea>
                       <h1>Relationships</h1>
-                      <input type="text" id="relationships">
+                      <textarea rows="1" cols="30" name="relationship"></textarea>
                   </div>
               </div>
               <label class="checkbox-inline">
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-md-4"></div>
             <div class="col-md-4 text-center">
-  			   <button class="btn btn-success" name="foo" value="upvote">Publish</button>
+  			   <button class="btn btn-success" name="submit" type="submit" value="upvote">Publish</button>
                 <!--<a href="/cocomapapp/topic/second" style="width:100%" type="button" class="btn btn-primary">Publish</a> -->
             </div>
             <div class="col-md-4"></div>
