--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -5,6 +5,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../assets/main.css">
     <!-- Latest compiled and minified CSS -->
@@ -34,7 +36,7 @@
           <li><a href="/cocomapapp">Home Page <span class="sr-only"></span></a></li>
           <li><a href="#">Profile</a></li>
           <li><a href="#">Log Out</a></li>
-          <li><a href="add">Create Topic</a></li>
+          <li><a href="topic/add">Create Topic</a></li>
           <li><a href="#">Add Relationship</a></li>
         </ul>
 				<div class="pull-right">
