--- a/cocomapapp/templates/topic.html
+++ b/cocomapapp/templates/topic.html
@@ -1,6 +1,8 @@
-<<<<<<< HEAD
 {% extends 'base.html' %}
+
 {% block content %}
+<script src="/static/topic.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="/static/topic.css">
 	<div class="col-sm-9 col-md-9 main">
 		<!-- title -->
 		<div class="mb-for-footer">
