--- a/cocomapapp/templates/topicAdd.html
+++ b/cocomapapp/templates/topicAdd.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">        </script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<link href="/static/selectize.default.css" rel="stylesheet"/>
 		<script src="/static/selectize.js" type="text/javascript"></script>
-		<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
+		<link rel="stylesheet" type="text/css" href="/static/style.css" />
 		<script src="/static/topicadd.js" type="text/javascript"></script>
 		<script src="/static/typeahead.bundle.js" type="text/javascript"></script>
 		<script src="/static/bootstrap-tagsinput.js" type="text/javascript"></script>
@@ -29,11 +29,10 @@
 										<input type="text" id="tags" data-role="tagsinput" placeholder="Tag">
                 </div>
             </div>
-            <label class="checkbox-inline" id="postCheck">
-                <input type="checkbox" id="checkbox" data-toggle="collapse" data-target="#post">Check this if you want to add a post(you can add the post later)</input>
+						<label class="checkbox-inline" id="postCheck">
+                <input type="checkbox" id="checkbox" data-toggle="collapse" data-target="#postInTopicAdd">Check this if you want to add a post(you can add the post later)</input>
 						</label>
-						<textarea class="form-control collapse" rows="3" id="post"></textarea> <br/>
-
+						<textarea class="form-control collapse" rows="3" id="postInTopicAdd"></textarea> <br/>
         </div>
         <div class="col-md-1"></div>
       </div>
