Tag, Topic, Post models changed User model added Urls fixed templates fixed

--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -66,11 +66,11 @@
           }
 
           function redirectToTopic() {
-              window.location.href = "/cocomapapp/topic/show"
+              window.location.href = "/cocomapapp/topics/10"
           }
 
           function redirectToTopicMath() {
-              window.location.href = "/cocomapapp/topic/math"
+              window.location.href = "/cocomapapp/topics/2"
           }
       </script>
   </div>
