--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
 
 <!DOCTYPE html>
 <html>
@@ -8,7 +7,8 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../assets/main.css">
+		<link rel="stylesheet" type="text/css" href="/static/style.css" />
+    <link rel="stylesheet" type="text/css" href="/static/main.css" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
@@ -36,7 +36,7 @@
           <li><a href="/cocomapapp">Home Page <span class="sr-only"></span></a></li>
           <li><a href="#">Profile</a></li>
           <li><a href="#">Log Out</a></li>
-          <li><a href="topic/add">Create Topic</a></li>
+          <li><a href="topics/add">Create Topic</a></li>
           <li><a href="#">Add Relationship</a></li>
         </ul>
 				<div class="pull-right">
