--- a/cocomapapp/templates/base.html
+++ b/cocomapapp/templates/base.html
@@ -36,7 +36,7 @@
           <li><a href="/cocomapapp">Home Page <span class="sr-only"></span></a></li>
           <li><a href="#">Profile</a></li>
           <li><a href="#">Log Out</a></li>
-          <li><a href="topics/add">Create Topic</a></li>
+          <li><a href="/cocomapapp/topics/add">Create Topic</a></li>
           <li><a href="#">Add Relationship</a></li>
         </ul>
 				<div class="pull-right">
