--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -71,11 +71,11 @@
 
           // create an array with edges
           var edges = new vis.DataSet([
-            {from: 1, to: 3},
+            {from: 1, to: 3, arrows:'from'},
             {from: 1, to: 2},
-            {from: 2, to: 4},
-            {from: 2, to: 3},
             {from: 1, to: 5},
+            {from: 2, to: 4, arrows:'to'},
+            {from: 2, to: 3, arrows:'from'},
           ]);
 
           // create a network
