--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -92,9 +92,12 @@
               document.getElementById('eventSpan').innerHTML = '<h2>Click event:</h2>' + JSON.stringify(params, null, 4);
 
               var clickedNode = params['nodes'][0];
-              if(clickedNode != undefined)
-              window.location = "https://www.youtube.com/watch?v=aULM7vv8llk";
-
+              if(clickedNode != undefined){
+                  if(clickedNode<3)
+                    window.location.href = "/cocomapapp/topic/show";
+                  else
+                    window.location.href = "/cocomapapp/topic/math";
+              }
               console.log(params);
               console.log(params['nodes'][0]);
           });
