--- a/cocomapapp/templates/global.html
+++ b/cocomapapp/templates/global.html
@@ -51,7 +51,7 @@
         <!-- /.container-fluid -->
     </nav>
     <div class="col-sm-9 col-md-9 main">
-      <div id="mynetwork" style="width:1000; height:600; ">
+      <div id="mynetwork" style="width:100%; height:80%; ">
         <div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;">
           <canvas width="1200" height="800" style=" position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas>
         </div>
